www/roman-sunclock.css
html {
    font-size: 1vh;
}

body {
    --background-color: white;
    --main-color: black;
    --secondary-color: lightgrey;
    --day-color: white;
    --night-color: grey;
    display: flex;
    flex-direction: column;
    background-color: var(--background-color);
    color: var(--secondary-color);
    width: 100vw;
    height: 100vh;
    font-size: 3rem;
    margin: 0;
    user-select: none;
}

.RomanSunclock {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100%;
    overflow: hidden;
    perspective: 100rem;
    transform-style: preserve-3d;
}

.RomanSunclock__Container {
    text-align: center;
    backface-visibility: hidden;
    border: .2rem solid var(--secondary-color);
    padding: 4rem;
    height: 48rem;
    width: min(80vw, 34rem);
    position: absolute;
    transition: transform 1s;
    display: inline-flex;
    align-items: center;
    justify-content: center;
}

.RomanSunclock__Container--front {
    transform: rotateY(0);
}

.RomanSunclock__Container--back {
    transform: rotateY(180deg);
}

.RomanSunclock--flipped .RomanSunclock__Container--front {
    transform: rotateY(-180deg);
}

.RomanSunclock--flipped .RomanSunclock__Container--back {
    transform: rotateY(0);
}

.RomanSunclock--loading .RomanSunclock__LoadingDetails {
    display: block;
}

.RomanSunclock__LoadingDetails {
    display: none;
}

.RomanSunclock__Details {
    display: flex;
    align-items: center;
    flex-direction: column;
    justify-content: center;
}

.RomanSunclock--loading .RomanSunclock__Details {
    display: none;
}

.RomanSunclock__Clock {
    margin: 3rem 0 2rem 0;
    position: relative;
    display: flex;
    justify-content: center;
}

.RomanSunclock__Clock__Image {
    height: 30rem;
    width: 30rem;
}

.RomanSunclock__Clock__Image svg {
    height: 30rem;
    width: 30rem;
}


.RomanSunclock__Clock__Hours {
    position: absolute;
    height: 30rem;
    width: 30rem;
    top: 0;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.RomanSunclock__Clock__RomanTime,
.RomanSunclock__Description {
    color: var(--main-color);
}

.RomanSunclock__Description p {
    font-size: 2.7rem;
    margin: 0 0 3rem 0;
}

.RomanSunclock__Clock__LocalTime {
    color: var(--secondary-color);
}

.RomanSunclock__DayOrNight {
    width: 6rem;
    height: 6rem;
    margin: 1rem;
    background-repeat: no-repeat;
    background-size: 100%;
}

.RomanSunclock__DayOrNight--day {
    background-image: url("8666699_sun_icon.svg");
}

.RomanSunclock__DayOrNight--night {
    background-image: url("9025743_moon_icon.svg");
}

.RomanSunclock__Version {
    color: var(--secondary-color);
    font-size: 2rem;
    text-align: center;
}

.RomanSunclock__Version a {
    text-decoration: none;
    color: inherit;
}

.RomanSunclock__Logo {
    height: 1.5rem;
    position: absolute;
    bottom: -9.75rem;
    width: calc(100% - 8rem);
}

.RomanSunclock__Logo svg {
    position: relative;
    height: 3rem;
    width: 3rem;
    bottom: 9.5rem;
    background: var(--background-color);
    fill: var(--secondary-color);
    padding: 0 1rem;
}

@media (prefers-color-scheme: dark) {
    body {
        --background-color: black;
        --main-color: white;
        --secondary-color: grey;
        --night-color: grey;
    }

    .RomanSunclock__DayOrNight--day {
        background-image: url("8666699_sun_icon-white.svg");
    }

    .RomanSunclock__DayOrNight--night {
        background-image: url("9025743_moon_icon-white.svg");
    }
}

